samples/_failures_safe/1761074220_9eacc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d728577.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8d728577.c:175:23: error: expected ‘;’ at end of input
  175 |                 tokens
      |                       ^
      |                       ;
./samples/SAFE/__tmp_8d728577.c:175:17: error: expected declaration or statement at end of input
  175 |                 tokens
      |                 ^~~~~~
./samples/SAFE/__tmp_8d728577.c:175:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d728577.c:175:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d728577.c:175:17: error: expected declaration or statement at end of input
